--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/mobile-app-2025/Silversand-IPA/app.ipa</string>
+					<string>https://mobile-app-2025.github.io/Silversand-IPA/app.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
